支持Enum自动从0开始|支持Const定义|完善工具详细日志

--- a/doc/序列化工具文档.md
+++ b/doc/序列化工具文档.md
@@ -16,8 +16,9 @@
     Class类型结构定义
 <Class Name = "AllClass"  Index = "ID" DataPath="Data所有Class类型.xlsx" Desc = "所有类型", Group = "Client"> -- Inherit = "SingleClass"
     <Const Name = "ItemString" Type = "string" Value = "Hello World" Desc = "常量字符串" />
-    <Const Name = "ItemFloat" Type = "float" Value = "3.141527" Desc = "常量浮点值" />    
-    <Field Name = "ID" Type = "int" Desc = "ID" Group = "Client" />
+    <Const Name = "ItemFloat" Type = "float" Value = "3.141527" Desc = "常量浮点值" />
+	<Const Name = "ItemBool" Type = "bool" Value = "False" Desc = "常量布尔值" />
+	<Const Name = "ItemEnum" Type = "AllType.CardElement" Value = "Renounce" Desc = "常量枚举值" />
     <Field Name = "Index" Type = "int" Desc = "Test.TID"  Group = "Client"/> 
     <Field Name = "VarLong" Type = "long" Desc = "长整型" Group = "Client"/>
     <Field Name = "VarFloat" Type = "float" Desc = "浮点型" Group = "Client"/>
@@ -54,7 +55,7 @@
     <Const/>:常量信息定义,仅供代码引用,表格中无法直接引用
             .Name:字段名称
             .Type:字段类型,必须是已存在类型.
-            .Value:字段默认值,当前仅支持基础类型,bool,int,float,string
+            .Value:字段默认值,当前仅支持基础类型,bool,int,long,float,string,enum
             .[Desc]:定义注释,便于理解和用于生产代码中的注释
             .[Group]:分组,用于导出,优先级低于Class
     <Field/>:字段信息定义
@@ -98,8 +99,14 @@
         其他行:可按数据描述文件中对应数据结构来填写数据.
                 .数据必须按对应类型填写,例如bool类型只能为false或true
                 .按字段顺序填写数据,可把一个结构分多行填写数据,以表格清晰度为主,酌情分行.
-                .遇到空列,即无任何数据的列,则直接跳过,继续按字段读取数据
-                .如果不想填写该字段数据,则可以填写null站位.null数据会按当前字段类型生成默认值.枚举/数值=0,bool=false,string=null,class=null,list=null,dict=null
+                .遇到空列,即无任何数据的列,除string类型外其他基础类型均直接跳过,继续按字段读取数据.
+                .如果不想填写该字段数据,则可以填写null站位.null数据会按当前字段类型生成默认值.
+                    *枚举/数值=0
+                    *bool=false
+                    *string=""
+                    *class=null
+                    *list=null
+                    *dict=null
                 .集合类型的数据长短不一,均以]]符号表示集合数据填写完毕.集合长度为0,也必须以]]符号收尾.       
                 .多态字段类型的数据,写明当前需要使用的类型名称,可为父类可为子类,注意名称完整性,然后再按Class类型字段顺序填写数据.
                 .枚举类型的数据,可使用直接使用字段别名(中文名称),也可使用字段名称.
