--- a/doc/序列化工具文档.md
+++ b/doc/序列化工具文档.md
@@ -19,7 +19,8 @@
     <Const Name = "ItemFloat" Type = "float" Value = "3.141527" Desc = "常量浮点值" />
 	<Const Name = "ItemBool" Type = "bool" Value = "False" Desc = "常量布尔值" />
 	<Const Name = "ItemEnum" Type = "AllType.CardElement" Value = "Renounce" Desc = "常量枚举值" />
-    <Field Name = "Index" Type = "int" Desc = "Test.TID"  Group = "Client"/> 
+    <Field Name = "ID" Type = "int" Desc = "ID" Group = "Client" />
+    <Field Name = "Index" Type = "int" Desc = "Test.TID"  Group = "Client" /> <!--Ref="Test"--><!--  RefPath = "../../Resources/*.txt"/> -->
     <Field Name = "VarLong" Type = "long" Desc = "长整型" Group = "Client"/>
     <Field Name = "VarFloat" Type = "float" Desc = "浮点型" Group = "Client"/>
     <Field Name = "VarString" Type = "string" Desc = "字符串" Group = "Client"/>
@@ -63,6 +64,7 @@
             .Type:字段类型,必须是已存在类型. 
             .[Desc]:定义注释,便于理解和用于生产代码中的注释
             .[Group]:分组,用于导出,优先级低于Class
+            .[*check]:字段数据检查功能,详细见后文!
     <Enum/>:Enum类型,即枚举类型
             .Name:枚举名称
             .[Desc]:定义注释,便于理解和用于生产代码中的注释
@@ -99,16 +101,11 @@
         其他行:可按数据描述文件中对应数据结构来填写数据.
                 .数据必须按对应类型填写,例如bool类型只能为false或true
                 .按字段顺序填写数据,可把一个结构分多行填写数据,以表格清晰度为主,酌情分行.
-                .遇到空列,即无任何数据的列,除string类型外其他基础类型均直接跳过,继续按字段读取数据.
-                .如果不想填写该字段数据,则可以填写null站位.null数据会按当前字段类型生成默认值.
-                    *枚举/数值=0
-                    *bool=false
-                    *string=""
-                    *class=null
-                    *list=null
-                    *dict=null
+                .遇到空列,即无任何数据的列,将直接跳过,继续按字段读取数据.注意:漏填数据而导致的空列跳过数据,可能会因为字段类型检查而报错
+                .仅string类型可填写看不见的数据,如空格,换行符等符号
                 .集合类型的数据长短不一,均以]]符号表示集合数据填写完毕.集合长度为0,也必须以]]符号收尾.       
                 .多态字段类型的数据,写明当前需要使用的类型名称,可为父类可为子类,注意名称完整性,然后再按Class类型字段顺序填写数据.
                 .枚举类型的数据,可使用直接使用字段别名(中文名称),也可使用字段名称.
     多态类型数据:多态是程序方面的一个专业术语,字面意思就是多种状态,简单的说就是允许将子类类型赋值给父类类型.举个例子:定义了父类(猫科动物),在定义各种子类(老虎,狮子,豹子,家猫),子类可是父类,但子类有各种不同的特征.
     
+# 数据检查功
