添加检查功能(待测试)

--- a/doc/序列化工具文档.md
+++ b/doc/序列化工具文档.md
@@ -1,7 +1,7 @@
 # 概述
     工具支持excel\xml类型文件配置数据,方便为多种不同环境生成代码和数据.主要还是以面向对象的方式去设计数据结构,数据支持继承(xml数据中可表现,需要对应模块系统支持)和多态功能.
 
-# 配置文件
+# 模块配置文件
     模块配置文件均放在根目录,文件中包含了模块中需要导出的配置文件及规则描述.需要导出的配置文件在模块配置文件中以相对路径描述.
 <Module Name = "Cfg">
     <Groups>Client:Server:Editor</Groups>
@@ -89,6 +89,16 @@
             .list:格式为list:type--type:除集合类型以外都支持
             .dict:格式为dict:key:value--key:支持int,long,string,enum类型;value:除集合类型以外都支持
 
+# 定义分组
+<Class ... Group = "*" .../>
+<Enum ... Group = "*" .../>
+<Field ... Group = "*" .../>
+<Const ... Group = "*" .../>
+<Item ... Group = "*" .../>
+    分组需要在模块配置文件中预定义,然后在结构描述文件中使用.在数据生成时,按照分组的使用以及优先级去过滤无用数据.
+    <Class|Enum>:优先级高
+    <Field|Const|Item>:优先级低
+
 # 数据文件
     当前支持数据文件有三种:
             .Excel数据文件:该部分主要由策划负责手动配置表格数据.
@@ -109,3 +119,4 @@
     多态类型数据:多态是程序方面的一个专业术语,字面意思就是多种状态,简单的说就是允许将子类类型赋值给父类类型.举个例子:定义了父类(猫科动物),在定义各种子类(老虎,狮子,豹子,家猫),子类可是父类,但子类有各种不同的特征.
     
 # 数据检查功
+    详细见检查命令规则表.
