完成数据表-多态类型

--- a/doc/序列化工具文档.md
+++ b/doc/序列化工具文档.md
@@ -99,7 +99,7 @@
     <Class|Enum>:优先级高
     <Field|Const|Item>:优先级低
 
-# 数据文件
+# 数据文件-普通类型
     当前支持数据文件有三种:
             .Excel数据文件:该部分主要由策划负责手动配置表格数据.
             .Xml数据文件目录:数据文件均由对应系统编辑器生产,无需直接编辑.
@@ -116,7 +116,32 @@
                 .集合类型的数据长短不一,均以]]符号表示集合数据填写完毕.集合长度为0,也必须以]]符号收尾.       
                 .多态字段类型的数据,写明当前需要使用的类型名称,可为父类可为子类,注意名称完整性,然后再按Class类型字段顺序填写数据.
                 .枚举类型的数据,可使用直接使用字段别名(中文名称),也可使用字段名称.
+    名称完整性:在同一命名空间时,支持可省略命名空间名称直接写类名;其他情况均需要写全名称,否则无法找到对应类型.    
+
+# 数据文件-多态类型
     多态类型数据:多态是程序方面的一个专业术语,字面意思就是多种状态,简单的说就是允许将子类类型赋值给父类类型.举个例子:定义了父类(猫科动物),在定义各种子类(老虎,狮子,豹子,家猫),子类可是父类,但子类有各种不同的特征.
+    以下为表格多态类型定义:
+<Namespace Name = "Base">
+    <Class Name = "BaseClass"  Index = "ID" DataPath="Base.xlsx" Desc = "所有类型">
+		<Field Name = "ID" Type = "int" Desc = "ID" Group = "Client" />
+        <Field Name = "Index" Type = "int" Desc = "Test.TID"  Group = "Client" />
+	</Class>
+	<Class Name = "AClass" Inherit = "BaseClass">
+		<Field Name = "AIndex" Type = "int" Desc = "Int"  Group = "Client" />
+	</Class>
+	<Class Name = "BClass" Inherit = "BaseClass">
+		<Field Name = "BIndex" Type = "string" Desc = "Int"  Group = "Client" />
+    </Class>
+</Namespace>
+    Excel数据描述如下:
+BaseClass	5	10	
+BaseClass	1	20	
+AClass	    2	30	123
+BClass	    3	40	Name
+    必须在首列指明数据类型,否则数据无法正确读取.
+    多态类型表格与普通表格差异仅在首列数据需要指明类型,其他均一致.不难发现,这种填写方式,与其他地方填写多态类型数据方式一致:先填类型,再填写父类字段数据,最后填写子类数据.
+    以上描述的是,父类索引表,子类类型数据与父类在同一张表,数据解析效率高.
+    还有另一种方式,父类不索引表,具体索引表有子类类型来定义,则每个子类对应一张表,但数据解析效率低.
     
 # 数据检查功
     详细见检查命令规则表.
