C#枚举支持添加Flags标签功能

--- a/doc/序列化工具文档.md
+++ b/doc/序列化工具文档.md
@@ -35,16 +35,16 @@
     <Field Name = "VarDictClass" Type = "dict:string:SingleClass" Desc = "类类型字典" Group = "Client"/>
 </Class>
 <Enum Name="CardElement" Desc="卡牌枚举">
-        <Item Name = "Attack" Value = "0" Alias="攻击"/>
-        <Item Name = "Extract" Value = "1" Alias="抽牌"/>
-        <Item Name = "Renounce" Value = "2" Alias="弃牌"/>
-        <Item Name = "Armor" Value = "3" Alias="护甲"/>
-        <Item Name = "Control" Value = "4" Alias="控制"/>
-        <Item Name = "Cure" Value = "5" Alias="治疗"/>
-        <Item Name = "Oneself" Value = "6" Alias="自残"/>
-        <Item Name = "Hand" Value = "7" Alias="手牌"/>
-        <Item Name = "Brary" Value = "8" Alias="牌库"/>
-        <Item Name = "Handack" Value = "9" Alias="手牌攻击"/>
+        <Item Name = "Attack" Value = "1" Alias="攻击"/>
+        <Item Name = "Extract" Value = "2" Alias="抽牌"/>
+        <Item Name = "Renounce" Value = "3" Alias="弃牌"/>
+        <Item Name = "Armor" Value = "4" Alias="护甲"/>
+        <Item Name = "Control" Value = "5" Alias="控制"/>
+        <Item Name = "Cure" Value = "6" Alias="治疗"/>
+        <Item Name = "Oneself" Value = "7" Alias="自残"/>
+        <Item Name = "Hand" Value = "8" Alias="手牌"/>
+        <Item Name = "Brary" Value = "9" Alias="牌库"/>
+        <Item Name = "Handack" Value = "10" Alias="手牌攻击"/>
 </Enum>
     <Class/>:Class类型信息定义
             .Name:类名称
@@ -67,14 +67,16 @@
             .[*check]:字段数据检查功能,详细见后文!
     <Enum/>:Enum类型,即枚举类型
             .Name:枚举名称
+            .[IsFlags]:C#层枚举标记,是否作为枚举标签,主要用于位操作时,默认False;Bolt序列化数据,会区分是否带此标签.带标签则可存储多种状态值,反之不可.
             .[Desc]:定义注释,便于理解和用于生产代码中的注释
             .[Group]:分组,用于导出,优先级高于字段
      <Item/>:枚举字段定义
             .Name:字段名称
-            .Value:枚举字段
-            .Alias:枚举别名,可直接使用该内容在表格中填写,比如使用中文名称,这样便于理解表格中的枚举
+            .Value:枚举字段,未做描述时,默认从1开始.
+            .Alias:枚举别名,可直接使用该内容在表格中填写,比如使用中文名称,这样便于理解表格中的枚举;仅表格可用.
             .[Desc]:定义注释,便于理解和用于生产代码中的注释
             .[Group]:分组,用于导出,优先级低于Enum
+            注:枚举值最好从1开始,避免占用位操作部分的Nothing(0),Everything(-1).
     [标识符规则]上述Name属性值必须符合代码命名规则--首字母及后续字母:A-Z,a-z,'_',非首字母:0-9
     [属性可选性]上述关于属性说明中,[]符号的属性为可选属性,其他为必须要属性.
     [名称完整性]Inherit属性,Type属性在引用自定义Class/Enum时,必须注意名称完整性,在同一命名空间内时可省略命名空间名称,反之必须写出完整名称
