--- a/doc/序列化工具文档.md
+++ b/doc/序列化工具文档.md
@@ -56,7 +56,7 @@
     <Const/>:常量信息定义,仅供代码引用,表格中无法直接引用
             .Name:字段名称
             .Type:字段类型,必须是已存在类型.
-            .Value:字段默认值,当前仅支持基础类型,bool,int,long,float,string,enum
+            .Value:字段默认值,当前仅支持基础类型**<u>(bool,int,long,float,string,enum)</u>**
             .[Desc]:定义注释,便于理解和用于生产代码中的注释
             .[Group]:分组,用于导出,优先级低于Class
     <Field/>:字段信息定义
